# unicorn-fy

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  dev_get_results.py  dev_one_stream.py  dev_stream_everything_and_unicorn_fy.py  dev_test_conversion.py  dev_test_futures_depth.py  environment.yml  example_logging.py  example_unicorn_fy.py  example_version_of_this_package.py  meta.yaml  pull_request_template.md  pypi_create_test_wheel.sh  pypi_create_wheel.sh  pypi_install_packaging_tools.sh  pypi_remove_files.sh  pypi_upload_wheel.sh  pyproject.toml  requirements.txt  reset.sh  setup.py  test-requirements.txt  test_one_stream.py  test_setup.py  test_stream_everything_and_unicorn_fy.py  test_tickers.py  unicorn_fy.py  unittest_unicorn_fy.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: build_wheels.yml  build_wheels_new.yml  build_wheels_orig.yml  codeql-analysis.yml  python-app.yml  unit-tests.yml
dev/: get_results.py  link_lib.sh  one_stream.py  reset.sh  set_version_config.txt  stream_everything_and_unicorn_fy.py  test_conversion.py  test_one_stream.py  test_stream_everything_and_unicorn_fy.py  unlink_lib.sh
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: create_docs.sh
dev/sphinx/source/: changelog.md  conf.py  index.rst  license.rst  readme.md  security.md  unicorn_fy.rst
docs/: .buildinfo  CHANGELOG.html  CNAME  README.html  changelog.html  code_of_conduct.html  contributing.html  copyright.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  security.html  unicorn_fy.html
docs/_modules/: index.html
docs/_modules/unicorn_fy/: unicorn_fy.html
docs/_sources/: CHANGELOG.md.txt  README.md.txt  changelog.md.txt  index.rst.txt  readme.md.txt
docs/_static/: searchtools.js
examples/: README.md
examples/_archive/: example_logging.py  example_unicorn_fy.py  example_version_of_this_package.py
pypi/: create_wheel.sh  install_packaging_tools.sh  pypi_create_wheel.sh  remove_files.sh  upload_wheel.sh
sphinx/: create_docs.sh  install_sphinx.sh  release_docs.sh
sphinx/source/: changelog.md  conf.py  index.rst  modules.rst
unicorn_fy/: __init__.py  unicorn_fy.py
